# Stellar-Soroban-demo

./: .gitignore  Cargo.toml  README.md
contracts/hello-world/: Cargo.toml
contracts/hello-world/src/: err.rs  lib.rs  test.rs  types.rs
contracts/prediction/: Cargo.toml
contracts/prediction/src/: lib.rs  test.rs  types.rs
