[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.dependencies]
soroban-sdk = "22.0.8"
#soroban-token-sdk = { version = "22.0.8" }
#sep-41-token = "1.2.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# for printing debug logs when using the stellar-cli
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
